--- a/app.json
+++ b/app.json
@@ -1,3 +1,21 @@
+const express = require('express');
+const app = express();
+
+// Define a default port or use the PORT environment variable
+const port = process.env.PORT || 3000;
+
+// Define a simple route
+app.get('/', (req, res) => {
+  res.send('Hello, world!');
+});
+
+// Start the server
+app.listen(port, () => {
+  console.log(`Server is running on port ${port}`);
+});
+
+
+
 {
   "name": "Url-Shortener-bot-V2",
   "description": "Make short link by using Shortener using API key",
